--- a/0.python/1.oop.ipynb
+++ b/0.python/1.oop.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "삼각형 클래스 만들기"
+    "### **삼각형 클래스 만들기**"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "사각기둥 클래스 만들기"
+    "### **사각기둥 클래스 만들기**"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "오버라이딩"
+    "### **오버라이딩**"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "car class"
+    "### **car class**"
    ]
   },
   {
