--- a/1.Crawling/1.requests library.ipynb
+++ b/1.Crawling/1.requests library.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "메소드 확인"
+    "### **메소드 확인**"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GET 방식 "
+    "### **GET 방식**"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "POST 방식"
+    "### **POST 방식**"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SSL 인증서란    "
+    "### **SSL 인증서란**  "
    ]
   },
   {
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "인증"
+    "### **인증**"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "그 밖에 헤더, 쿠키, 타임아웃 ....이 있음"
+    "#### 그 밖에 헤더, 쿠키, 타임아웃 ....이 있음"
    ]
   }
  ],
