--- a/1.Crawling/2.JSON.ipynb
+++ b/1.Crawling/2.JSON.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "JSON데이터 처리 : 데이터 교환시 문자열 테이터 -> 파이썬 객체 데이터 or 파이썬 객체 -> 문자열"
+    "### **JSON데이터 처리란**\n",
+    "#### : 데이터 교환시 문자열 테이터 -> 파이썬 객체 데이터 or 파이썬 객체 -> 문자열\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "JSON 문자열로 변환하기"
+    "### **JSON 문자열로 변환하기**"
    ]
   },
   {
@@ -48,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "JSON 문자열을 변환하기"
+    "### **JSON 문자열을 변환하기**"
    ]
   },
   {
@@ -75,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "JSON 특정자료 접근하기"
+    "### **JSON 특정자료 접근하기**"
    ]
   },
   {
