--- a/0.python/2.module.ipynb
+++ b/0.python/2.module.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Numpy**"
+    "# **Numpy**"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 문제 풀기    "
+    "# **문제 풀기**    "
    ]
   },
   {
