--- a/0.python/2.module.ipynb
+++ b/0.python/2.module.ipynb
@@ -54,18 +54,18 @@
    "source": [
     "np.random.randint: 균등 분포 정수 난수 1개 생성  \n",
     "\n",
-    "## **ndarray**\n",
+    "# **ndarray**\n",
     "Numpy의 핵심인 다차원 행렬 자료구조 클래스\n",
     "선언은 a = np.array([])의 형태    \n",
     "출력형태는 List와 같음  \n",
     "\n",
-    "### **Python list**\n",
+    "## Python list\n",
     "* 여러가지 타입의 원소 \n",
     "* Linked list 구현  \n",
     "* 메모리 용량이 크고 속도가 느림  \n",
     "* 벡터화 연산 불가  \n",
     "\n",
-    "### **Numpy ndarray**  \n",
+    "## Numpy ndarray \n",
     "* 동일 타입의 원소  \n",
     "* contiguous memory layout (연속 메모리 할당) : C계열 메모리\n",
     "* 메모리 최적화, 계산 속도 향상  \n",
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tensorflow "
+    "# Tensorflow "
    ]
   },
   {
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **문제**  \n",
+    "## 문제\n",
     "연산자 오퍼레이팅 문제 : 아래함수 채우기"
    ]
   },
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **답**"
+    "## 답"
    ]
   },
   {
