--- a/1.python/2-2.Exercise/Exercise.ipynb
+++ b/1.python/2-2.Exercise/Exercise.ipynb
@@ -4,192 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Numpy**\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "module"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "type(np.random)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4 4 4 3 3 1 2 3 5 2]\n",
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "rolls = np.random.randint(low=1, high=6, size=10)\n",
-    "print(rolls)\n",
-    "print(type(rolls))  \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "np.random.randint: 균등 분포 정수 난수 1개 생성  \n",
-    "\n",
-    "# **ndarray**\n",
-    "---\n",
-    "Numpy의 핵심인 다차원 행렬 자료구조 클래스\n",
-    "선언은 a = np.array([])의 형태    \n",
-    "출력형태는 List와 같음  \n",
-    "\n",
-    "### **Python list**\n",
-    "* 여러가지 타입의 원소 \n",
-    "* Linked list 구현  \n",
-    "* 메모리 용량이 크고 속도가 느림  \n",
-    "* 벡터화 연산 불가  \n",
-    "\n",
-    "### **Numpy ndarray** \n",
-    "* 동일 타입의 원소  \n",
-    "* contiguous memory layout (연속 메모리 할당) : C계열 메모리\n",
-    "* 메모리 최적화, 계산 속도 향상  \n",
-    "* 벡터화 연산 가능  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4 4 4 3 3 1 2 3 5 2]\n",
-      "[14 14 14 13 13 11 12 13 15 12]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# [1,2,3] + 10 이라는 연산은 말도 안된다 but 벡터화 연산에서는 ?\n",
-    "print(rolls)\n",
-    "print(rolls+10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 2, 3], [4, 5, 6]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2, 3],\n",
-       "       [4, 5, 6]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "xlist = [[1,2,3],[4,5,6]]\n",
-    "print(xlist)\n",
-    "copyxList = np.asarray(xlist)\n",
-    "copyxList"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "np.asarray()와 np.array()는 기능에 있어서 차이는 없지만 복사 관련하여 차이가 있음  \n",
-    "(정확히는 모르겠음..)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "[1 2 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#ndarray 출력하기\n",
-    "print(copyxList[0,2]) \n",
-    "print(copyxList[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# **Tensorflow**\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(), dtype=int32, numpy=2>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "a = tf.constant(1)\n",
-    "b = tf.constant(1)\n",
-    "a + b\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# **문제 풀기**\n",
+    "# **Exercise**\n",
     "---    "
    ]
   },
@@ -203,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,28 +59,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n",
       "True\n",
-      "10\n",
       "False\n",
-      "False\n",
-      "24\n"
+      "False\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
