--- a/3.Pandas/4-2.Exercise/Exercise.ipynb
+++ b/3.Pandas/4-2.Exercise/Exercise.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4      Pinot Noir         Sweet Cheeks  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,6 @@
     "reviews = pd.read_csv(\n",
     "    \"../datafile/winemag-data-130k-v2.csv\", index_col=0)\n",
     "print(\"Setup complete.\")\n",
-    "\n",
     "reviews.head()\n"
    ]
   },
@@ -198,7 +197,49 @@
    "metadata": {},
    "source": [
     "### **문제1**\n",
-    "reviews의 points의 median(중앙값) 구하기"
+    "taster_twitter_handle을 이용하여 가장 리뷰를 많이 한 리뷰어 구하기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **답**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "taster_twitter_handle\n",
+       "@AnneInVino        3685\n",
+       "@JoeCz             5147\n",
+       "                   ... \n",
+       "@winewchristina       6\n",
+       "@worldwineguys     1005\n",
+       "Name: taster_twitter_handle, Length: 15, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews_written = reviews.groupby(\"taster_twitter_handle\").taster_twitter_handle.count()\n",
+    "reviews_written"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **문제2**\n",
+    "각 가격(price)당 최고의 평점(points)을 구하기 "
    ]
   },
   {
@@ -216,7 +257,13 @@
     {
      "data": {
       "text/plain": [
-       "88.0"
+       "price\n",
+       "4.0       86\n",
+       "5.0       87\n",
+       "          ..\n",
+       "2500.0    96\n",
+       "3300.0    88\n",
+       "Name: points, Length: 390, dtype: int64"
       ]
      },
      "execution_count": 29,
@@ -225,16 +272,17 @@
     }
    ],
    "source": [
-    "median_points = reviews.points.median()\n",
-    "median_points"
+    "best_rating_per_price = reviews.groupby(\"price\").points.max().sort_index()\n",
+    "best_rating_per_price"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **문제2**\n",
-    "'나라'명을 중복 없이 나열하기"
+    "### **문제3**\n",
+    "각 종류별(variety) 가격(price)의 최대값과 최솟값 DataFrame만들기\n",
+    "  "
    ]
   },
   {
@@ -251,16 +299,75 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>variety</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Abouriou</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Agiorgitiko</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Çalkarası</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Žilavka</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>707 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['Italy', 'Portugal', 'US', 'Spain', 'France', 'Germany',\n",
-       "       'Argentina', 'Chile', 'Australia', 'Austria', 'South Africa',\n",
-       "       'New Zealand', 'Israel', 'Hungary', 'Greece', 'Romania', 'Mexico',\n",
-       "       'Canada', nan, 'Turkey', 'Czech Republic', 'Slovenia',\n",
-       "       'Luxembourg', 'Croatia', 'Georgia', 'Uruguay', 'England',\n",
-       "       'Lebanon', 'Serbia', 'Brazil', 'Moldova', 'Morocco', 'Peru',\n",
-       "       'India', 'Bulgaria', 'Cyprus', 'Armenia', 'Switzerland',\n",
-       "       'Bosnia and Herzegovina', 'Ukraine', 'Slovakia', 'Macedonia',\n",
-       "       'China', 'Egypt'], dtype=object)"
+       "              min   max\n",
+       "variety                \n",
+       "Abouriou     15.0  75.0\n",
+       "Agiorgitiko  10.0  66.0\n",
+       "...           ...   ...\n",
+       "Çalkarası    19.0  19.0\n",
+       "Žilavka      15.0  15.0\n",
+       "\n",
+       "[707 rows x 2 columns]"
       ]
      },
      "execution_count": 30,
@@ -269,17 +376,17 @@
     }
    ],
    "source": [
-    "countries = reviews.country.unique()\n",
-    "countries"
+    "price_extremes = reviews.groupby(\"variety\").price.agg(['min','max'])\n",
+    "price_extremes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **문제3**\n",
-    "각 나라의 개수 세기\n",
-    "  "
+    "### **문제4**\n",
+    "3번문제의 값을 정렬을 사용하여 가장 비싼 와인의 종류(variety) 구하기  \n",
+    "min 값이 우선이고 그다음 max 값 내림차순"
    ]
   },
   {
@@ -296,13 +403,75 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>variety</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ramisco</th>\n",
+       "      <td>495.0</td>\n",
+       "      <td>495.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Terrantez</th>\n",
+       "      <td>236.0</td>\n",
+       "      <td>236.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vital</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zelen</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>707 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "US        54504\n",
-       "France    22093\n",
-       "          ...  \n",
-       "China         1\n",
-       "Egypt         1\n",
-       "Name: country, Length: 43, dtype: int64"
+       "             min    max\n",
+       "variety                \n",
+       "Ramisco    495.0  495.0\n",
+       "Terrantez  236.0  236.0\n",
+       "...          ...    ...\n",
+       "Vital        NaN    NaN\n",
+       "Zelen        NaN    NaN\n",
+       "\n",
+       "[707 rows x 2 columns]"
       ]
      },
      "execution_count": 31,
@@ -311,16 +480,17 @@
     }
    ],
    "source": [
-    "reviews_per_country = reviews.country.value_counts()\n",
-    "reviews_per_country"
+    "sorted_varieties = price_extremes.sort_values(by=['min','max'], ascending=False)\n",
+    "sorted_varieties"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **문제4**\n",
-    "price에서 price 평균값 뺀 것 구하기"
+    "### **문제5**\n",
+    "평가자(taster_name)과 그 평가자의 평균 점수(points)의 Series를 만들기\n",
+    "  "
    ]
   },
   {
@@ -338,12 +508,13 @@
     {
      "data": {
       "text/plain": [
-       "0               NaN\n",
-       "1        -20.363389\n",
-       "            ...    \n",
-       "129969    -3.363389\n",
-       "129970   -14.363389\n",
-       "Name: price, Length: 129971, dtype: float64"
+       "taster_name\n",
+       "Alexander Peartree    85.855422\n",
+       "Anna Lee C. Iijima    88.415629\n",
+       "                        ...    \n",
+       "Susan Kostrzewa       86.609217\n",
+       "Virginie Boone        89.213379\n",
+       "Name: points, Length: 19, dtype: float64"
       ]
      },
      "execution_count": 32,
@@ -352,8 +523,51 @@
     }
    ],
    "source": [
-    "centered_price = reviews.price - reviews.price.mean()\n",
-    "centered_price"
+    "reviewer_mean_ratings = reviews.groupby('taster_name').points.mean()\n",
+    "reviewer_mean_ratings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **문제6**\n",
+    "평가자(taster_name)과 그 평가자의 평균 점수(points)의 Series를 만들기\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **답**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country  variety           \n",
+       "US       Pinot Noir            9885\n",
+       "         Cabernet Sauvignon    7315\n",
+       "                               ... \n",
+       "Mexico   Rosado                   1\n",
+       "Uruguay  White Blend              1\n",
+       "Length: 1612, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "country_variety_counts = reviews.groupby(['country','variety']).size().sort_values(ascending=False)\n",
+    "country_variety_counts"
    ]
   }
  ],
